--- a/lib/pagination/custom-pagination.css
+++ b/lib/pagination/custom-pagination.css
@@ -48,19 +48,24 @@
         background-image: -ms-linear-gradient(top, #D0D0D0, #EBEBEB);
         background-image: -o-linear-gradient(top, #D0D0D0, #EBEBEB);
         background-image: linear-gradient(top, #D0D0D0, #EBEBEB);
+     
     }
 
-    ._p-gination li a {
-        width: 100%;
-        height: 100%;
-        display: block;
-    }
+._p-gination li.current [disabled].disabled, ._p-gination li.current [disabled]:disabled {
+
+}
+
+._p-gination li a {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 
     ._p-gination li button {
         padding: 0 !important;
         margin: 0 !important;
         border: none !important;
-        background-color: transparent;
+        background-color: transparent !important;
         width: 100%;
         height: 100%;
         text-shadow: 0 1px 1px #FFF;
